--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "test": "tsc"
+    "start": "tsc"
   },
   "author": "Facundo Serna",
   "license": "ISC",
   "devDependencies": {
+    "@types/jquery": "^3.5.13",
     "typescript": "^4.5.4"
   }
 }
